--- a/interactive_viewer_advanced.html
+++ b/interactive_viewer_advanced.html
@@ -7,7 +7,7 @@
 	<title>Altitude Maps - 3D Elevation Viewer</title>
 
 	<!-- Removed Select2 CSS (not used; avoids CSS parse warnings) -->
-	<link rel="stylesheet" href="css/viewer-advanced.css?v=1.367">
+	<link rel="stylesheet" href="css/viewer-advanced.css?v=1.368">
 </head>
 
 <body>
@@ -19,15 +19,29 @@
 				style="position: absolute; top: 0; left: 0; pointer-events: none; width: 100%; height: 100%; z-index: 5;">
 			</div>
 
-			<!-- Color Scale Legend (lower-right corner) -->
-			<div id="color-legend" class="color-legend">
-				<div class="color-legend-content">
-					<canvas id="color-legend-canvas" width="32" height="320"></canvas>
-					<div id="color-legend-labels"></div>
+		<!-- Color Scale Legend (lower-right corner) -->
+		<div id="color-legend" class="color-legend">
+			<div class="color-legend-content">
+				<canvas id="color-legend-canvas" width="32" height="320"></canvas>
+				<div id="color-legend-labels"></div>
+			</div>
+			<div class="color-legend-title">Elevation</div>
+		</div>
+
+		<!-- Region Navigation Panel (lower-left corner) -->
+		<div id="region-navigation" class="region-navigation" style="display: none;">
+			<div class="region-nav-columns">
+				<div class="region-nav-column" id="contains-column">
+					<div class="region-nav-header">Contains</div>
+					<div class="region-nav-list" id="contains-list"></div>
 				</div>
-				<div class="color-legend-title">Elevation</div>
+				<div class="region-nav-column" id="contained-by-column">
+					<div class="region-nav-header">Contained By</div>
+					<div class="region-nav-list" id="contained-by-list"></div>
+				</div>
 			</div>
 		</div>
+	</div>
 
 		<div id="info" aria-live="polite" style="display:none;">
 			<button id="hud-minimize" title="Hide HUD">-</button>
@@ -451,60 +465,60 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
 	<!-- Camera Control Schemes -->
-	<script src="js/camera-schemes.js?v=1.367"></script>
-	<script src="js/ground-plane-camera.js?v=1.367"></script>
-	<script src="js/ground-plane-google-earth.js?v=1.367"></script>
+	<script src="js/camera-schemes.js?v=1.368"></script>
+	<script src="js/ground-plane-camera.js?v=1.368"></script>
+	<script src="js/ground-plane-google-earth.js?v=1.368"></script>
 
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 	<!-- Color schemes -->
-	<script src="js/color-schemes.js?v=1.367"></script>
+	<script src="js/color-schemes.js?v=1.368"></script>
 
 	<!-- Color scale legend -->
-	<script src="js/color-legend.js?v=1.367"></script>
+	<script src="js/color-legend.js?v=1.368"></script>
 
 	<!-- Geometry and spatial utilities -->
-	<script src="js/geometry-utils.js?v=1.367"></script>
+	<script src="js/geometry-utils.js?v=1.368"></script>
 
 	<!-- Data formatting utilities -->
-	<script src="js/format-utils.js?v=1.367"></script>
+	<script src="js/format-utils.js?v=1.368"></script>
 
 	<!-- Activity log utilities -->
-	<script src="js/activity-log.js?v=1.367"></script>
+	<script src="js/activity-log.js?v=1.368"></script>
 
 	<!-- Edge markers (N/E/S/W directional labels) -->
-	<script src="js/edge-markers.js?v=1.367"></script>
+	<script src="js/edge-markers.js?v=1.368"></script>
 
 	<!-- UI loading states (loading screen and progress bar) -->
-	<script src="js/ui-loading.js?v=1.367"></script>
+	<script src="js/ui-loading.js?v=1.368"></script>
 
 	<!-- Resolution controls (bucket size slider and presets) -->
-	<script src="js/resolution-controls.js?v=1.367"></script>
+	<script src="js/resolution-controls.js?v=1.368"></script>
 
 	<!-- Keyboard shortcuts (global shortcuts like R, +, -) -->
-	<script src="js/keyboard-shortcuts.js?v=1.367"></script>
+	<script src="js/keyboard-shortcuts.js?v=1.368"></script>
 
 	<!-- State connectivity (US states only) -->
-	<script src="js/state-connectivity.js?v=1.367"></script>
+	<script src="js/state-connectivity.js?v=1.368"></script>
 
 	<!-- UI Controls Manager -->
-	<script src="js/ui-controls-manager.js?v=1.367"></script>
+	<script src="js/ui-controls-manager.js?v=1.368"></script>
 
 	<!-- HUD System -->
-	<script src="js/hud-system.js?v=1.367"></script>
+	<script src="js/hud-system.js?v=1.368"></script>
 
 	<!-- Compass Rose -->
-	<script src="js/compass-rose.js?v=1.367"></script>
+	<script src="js/compass-rose.js?v=1.368"></script>
 
 	<!-- Map Shading -->
-	<script src="js/map-shading.js?v=1.367"></script>
+	<script src="js/map-shading.js?v=1.368"></script>
 
 	<!-- Terrain Renderer -->
-	<script src="js/terrain-renderer.js?v=1.367"></script>
+	<script src="js/terrain-renderer.js?v=1.368"></script>
 
 	<!-- Main viewer application -->
-	<script src="js/viewer-advanced.js?v=1.367"></script>
+	<script src="js/viewer-advanced.js?v=1.368"></script>
 </body>
 
 </html>
