--- a/interactive_viewer_advanced.html
+++ b/interactive_viewer_advanced.html
@@ -322,6 +322,8 @@
 					<span style="font-size: 11px; opacity: 0.6; min-width: 40px; text-align: right;">100x</span>
 				</div>
 				<div class="vert-ex-buttons" style="margin-top: 8px; display: flex; gap: 4px; flex-wrap: wrap;">
+					<button id="vertExagBtnFlat" data-value="flat" style="font-size: 10px; padding: 3px 6px; margin: 0;"
+						title="Flat view (no height variation)" onclick="setFlat()">Flat</button>
 					<button id="vertExagBtnTrue" data-value="true" style="font-size: 10px; padding: 3px 6px; margin: 0;"
 						title="Set real-world proportions (no exaggeration)" onclick="setTrueScale()">True Scale
 						(1:1)</button>
