--- a/interactive_viewer_advanced.html
+++ b/interactive_viewer_advanced.html
@@ -6,6 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Altitude Maps - 3D Elevation Viewer</title>
 
+	<!-- Favicons -->
+	<link rel="icon" type="image/svg+xml" href="favicon.svg">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="favicon-180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="favicon-192.png">
+	<link rel="icon" type="image/png" sizes="512x512" href="favicon-512.png">
+
 	<!-- Removed Select2 CSS (not used; avoids CSS parse warnings) -->
 	<link rel="stylesheet" href="css/viewer-advanced.css?v=1.368">
 </head>
@@ -363,6 +370,8 @@
 				<select id="colorScheme">
 					<option value="high-contrast" selected>High-Contrast (Intense)</option>
 					<option value="hypsometric-banded">Hypsometric (Banded)</option>
+					<option value="hypsometric-refined">Hypsometric (Refined 12-Band)</option>
+					<option value="hypsometric-intense">Hypsometric (Super Intense 12-Band)</option>
 					<option value="aspect">Aspect (Compass)</option>
 					<option value="terrain-muted">Terrain (Muted)</option>
 					<option value="hypsometric">Hypsometric (Perceptual)</option>
@@ -384,12 +393,16 @@
 				<div id="colorSchemeDescription" style="margin-top:6px; font-size: 11px; color:#88bbff;"></div>
 			</div>
 
-			<div id="bandEditor" class="control-group" style="display: none;">
-				<label>Band Boundaries (% of elevation range)</label>
-				<div style="font-size: 10px; color: #88bbff; margin-bottom: 8px;">Drag sliders to adjust where bands start</div>
-				<div id="bandEditorSliders" style="display: flex; flex-direction: column; gap: 8px;"></div>
-				<button id="resetBands" style="margin-top: 8px; padding: 6px; font-size: 11px; width: 100%;">Reset to Default</button>
+		<div id="bandEditor" class="control-group" style="display: none;">
+			<label>Band Boundaries (% of elevation range)</label>
+			<div style="font-size: 10px; color: #88bbff; margin-bottom: 8px;">Drag sliders to adjust where bands start</div>
+			<div id="bandEditorSliders" style="display: flex; flex-direction: column; gap: 8px;"></div>
+			<div style="display: flex; gap: 6px; margin-top: 8px;">
+				<button id="resetBands" style="padding: 6px; font-size: 11px; flex: 1;">Reset</button>
+				<button id="randomizeBands" style="padding: 6px; font-size: 11px; flex: 1;">Random</button>
+				<button id="equalizeBands" style="padding: 6px; font-size: 11px; flex: 1;">Equalize</button>
 			</div>
+		</div>
 
 			<div class="control-group">
 				<div style="display: flex; align-items: center; gap: 8px;">
